--- a/checkout.html
+++ b/checkout.html
@@ -24,6 +24,7 @@
       <!-- It should be the same movie you selected for booking  -->
     </div>
   </body>
-  <script src="./scripts/index.js"></script>
   <script src="./scripts/checkout.js"></script>
+  <!-- <script src="./scripts/index.js"></script> -->
+  
 </html>
